--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,8 @@ JB :
   archive_path: /archive.html
   categories_path : /categories.html
   tags_path : /tags.html
-  jobs_path : /to_web.pdf
+  web_path : /to_web.pdf
+  print_path : /to_print.pdf
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
